Added form for shipping address

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-alert": "^1.0.14",
     "react-dom": "^15.4.2",
     "react-fa": "^4.1.2",
+    "react-form": "^1.2.6",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-form": "^6.5.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
